--- a/frontend/src/pages/sms_bilgi/SmsBilgi.css
+++ b/frontend/src/pages/sms_bilgi/SmsBilgi.css
@@ -179,17 +179,18 @@ h1 {
 }
 
 .sms-table tbody tr {
-  background-color: #ffffff;
+  background-color: #ffffff; /* Beyaz */
   color: #333;
 }
 
 .sms-table tbody tr:nth-child(even) {
-  background-color: #fcebeb; /* Changed from #e9e9e9 */
+  background-color: #f2f2f2; /* Açık gri */
 }
 
 .sms-table tbody tr:hover {
-  background-color: #f8d7da; /* Changed from #dcdcdc */
+  background-color: #e0e0e0; /* Hoverda biraz koyu gri */
 }
+
 
 .sms-table .message-body-cell {
   width: 35%;
